<resources>
    <string name="app_name" translatable="false">Anime Couple Maker: Dress Up</string>
    <string name="this_action_may_contain_advertising">This action can contain ads</string>
    <string name="language">\u00A0Language</string>
    <string name="next">Next</string>
    <string name="next1">Next</string>
    <string name="permission">Permission</string>
    <string name="storage">Storage</string>
    <string name="notifications">Notifications</string>
    <string name="continue2">Continue</string>
    <string name="one_start_title">Oh, no!</string>
    <string name="four_start_title">You are so handsome</string>
    <string name="zero_star_title">Do you like the app?</string>
    <string name="one_start">I will cry all day</string>
    <string name="four_start">The prince is so handsome</string>
    <string name="zero_star">I need your love</string>
    <string name="rate_us">\u00A0Rate Us</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="create">CREATE</string>
    <string name="customize">CUSTOMIZE</string>
    <string name="save">Save</string>
    <string name="wait_a_few_second">Wait a minute</string>
    <string name="tv_cancel">Cancel</string>
    <string name="successfully">Successfully</string>
    <string name="successful">Successful</string>
    <string name="download">Download</string>
    <string name="share">Share</string>
    <string name="add_to_telegram">Add to TeleGram</string>
    <string name="add_to_whatsapp">Add to Whatsapp</string>

    <string name="no_item_here">No Item Here</string>
    <string name="delete">Delete</string>
    <string name="haven_saved_it_yet_are_you_sure_to_exit">Haven’t saved it yet,do you want to exit?</string>
    <string name="reset">Reset</string>
    <string name="do_you_want_to_reset_all">Do you want to reset all?</string>
    <string name="tv_no">No</string>
    <string name="are_you_sure_want_to_delete_this_item">Are you sure want to delete this item?</string>
    <string name="tv_yes">Yes</string>
    <string name="save_failed">Save failed</string>
    <string name="allow">Allow</string>
    <string name="request_permission_to_use_notifications_to_notify_you">the following permissions to use the app\'s functions</string>
    <string name="permission_granted">Permission granted</string>
    <string name="reques_storage">We need exclusive write permission to use the app\'s functions.</string>
    <string name="content_dialog_notification">We need push notification permission to be able to use the app\'s functions.</string>
    <string name="unknown">Unknown</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="no">No</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="do_you_want_to_reset">Do you want to reset?</string>
    <string name="setting">Settings</string>
    <string name="share_app">\u0020Share App</string>
    <string name="privacy_policy">\u0020<![CDATA[Privacy & Policy]]></string>
    <string name="the_layer_have_only_one_item">The layer have only one item</string>
    <string name="intro1">Create Your Dream Couple</string>
    <string name="intro2">Mix &amp; Match Cute Outfits</string>
    <string name="intro3">Design Your Own Love Story</string>
    <string name="you_have_not_selected_anything_yet">You have not selected any item yet</string>

    <string name="please_check_your_network_connection">Please check your internet</string>
    <string name="reset_your_customize">Reset</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">The character hasn\'t been saved, can you still exit?</string>
    <string name="are_you_want_to_delete_this_item">Are you sure want to delete this item?</string>
    <string name="please_wait_a_few_seconds_for_data_to_load">Please wait a few seconds for data to load.</string>
    <string name="image">Image</string>
    <string name="color">Color</string>
    <string name="color2">Color</string>
    <string name="input_text">Input text</string>
    <string name="text">Text</string>
    <string name="type_your_content">Type your content...</string>
    <string name="font">Font</string>
    <string name="avatar">My Couple</string>
    <string name="design">My Design</string>
    <string name="download_successfully">File downloaded successfully to folder</string>
    <string name="file_deleted_successfully">File deleted successfully</string>
    <string name="download_failed">File download failed</string>
    <string name="image_error_please_try_again">Image error, please try again!</string>
    <string name="add_image">Add Image</string>
    <string name="choose_color">Choose color</string>
    <string name="done">Done</string>
    <string name="null_edt">Please enter text</string>
    <string name="image_has_been_saved_successfully">Image has been saved successfully!!</string>
    <string name="category">Category</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="loading">Loading</string>
    <string name="edit">Edit</string>
    <string name="no_internet">No internet</string>
    <string name="internet">Internet</string>
    <string name="ok">Okay</string>
    <string name="background">Background</string>
    <string name="sticker">Sticker</string>
    <string name="speech_bubbles">Speech Bubbles</string>
    <string name="please_connect_to_the_internet_to_download_more_data">Please connect to the internet to download more data</string>
    <string name="data">Data</string>
    <string name="rate_successful">Thank you for rate our app</string>
    <string name="pony_maker">\u00A0Avatar Couple Maker\u00A0</string>
    <string name="trending_custom">Quick Create</string>
    <string name="generate_random">Generate Random</string>
    <string name="random_cat">\u00A0Avatar Random\u00A0</string>
    <string name="random">Random</string>
    <string name="my_avatar">\u00A0My Avatar\u00A0</string>
    <string name="my_creation">My Creation</string>
    <string name="cosplay_nuggts">\u00A0\Cosplay Avatar\u00A0</string>
    <string name="cosplay">Cosplay</string>
    <string name="instruction">Instruction</string>
    <string name="tvCosplay1">Cosplay Mode,</string>
    <string name="tvCosplay2">players are randomly given</string>
    <string name="tvCosplay3">one reference image</string>
    <string name="tvCosplay4">to follow. Your task is to recreate that character as accurately as possible by choosing the right</string>
    <string name="tvCosplay5">hairstyles, outfits, colors, and accessories.</string>
    <string name="tvCosplay6">Every correct match increases your</string>
    <string name="tvCosplay7">percentage score (%).</string>
    <string name="tvCosplay8">The closer your character looks to the random image, the higher your final score will be. Pay attention to small details to achieve the best cosplay result.</string>
    <string name="unstable_connection_please_check_your_network_connection">Unstable connection, please check your network connection</string>
    <string name="try_again">Try again</string>

</resources>