<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imvBack"
            android:layout_width="32dp"
            android:elevation="1dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="60dp"
            android:src="@drawable/ic_back_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/titleSetting"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/setting"
            android:singleLine="true"
            android:freezesText="true"
            android:layout_marginHorizontal="80dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            app:layout_constraintBottom_toBottomOf="@id/imvBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/imvBack"
            android:fontFamily="@font/fredoka_one_regular"
            android:textColor="@color/app_color2"
            android:textSize="24sp"
            style="@style/single_marquee"
            />
        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/frame_bg_setting"
            android:paddingBottom="4dp"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/imvBack">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_lang_set" />

            <com.anime.couple.couplemaker.utils.OuterStrokeTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@color/colorWhite"
                app:outerStrokeColor="@color/app_color2"
                app:outerStrokeWidth="1dp"
                style="@style/single_marquee"
                android:text="@string/language"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llRateUs"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingBottom="4dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/frame_bg_setting"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llLanguage">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_reate_set" />

            <com.anime.couple.couplemaker.utils.OuterStrokeTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fredoka_one_regular"
                android:text="@string/rate_us"
                android:textColor="@color/colorWhite"
                app:outerStrokeColor="@color/app_color2"
                app:outerStrokeWidth="1dp"
                style="@style/single_marquee"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llShareApp"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="18dp"
            android:paddingBottom="4dp"
            android:background="@drawable/frame_bg_setting"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llRateUs">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_share_set" />

            <com.anime.couple.couplemaker.utils.OuterStrokeTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@color/colorWhite"
                app:outerStrokeColor="@color/app_color2"
                app:outerStrokeWidth="1dp"
                style="@style/single_marquee"
                android:text="@string/share_app"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/llPrivacy"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="16dp"
            android:paddingBottom="4dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/frame_bg_setting"
            android:gravity="center_vertical"
            app:layout_constraintTop_toBottomOf="@id/llShareApp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_policy_set" />

            <com.anime.couple.couplemaker.utils.OuterStrokeTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/fredoka_one_regular"
                android:textColor="@color/colorWhite"
                app:outerStrokeColor="@color/app_color2"
                app:outerStrokeWidth="1dp"
                style="@style/single_marquee"
                android:text="@string/privacy_policy"
                android:textSize="16sp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>