<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@drawable/img_frame_bg_layer_bg"
    android:layout_height="match_parent">
    <TextView
        android:visibility="gone"
        android:id="@+id/titleBg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/spacegrotesk_bold"
        android:text="@string/text"
        android:textColor="@color/app_color6"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imvTick"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/imv_tick"
        android:layout_marginTop="8dp"
        app:tint="@color/app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imvTick">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="12dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/janda_manatee_solid"
                android:text="@string/text"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="22dp"
                android:layout_marginTop="1dp"
                android:background="@drawable/bg_white_8"
                android:fontFamily="@font/janda_manatee_solid"
                android:hint="@string/type_your_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="30"
                android:paddingStart="14dp"
                android:paddingEnd="6dp"
                android:singleLine="true"
                android:textColor="@color/_ffa843"
                android:textColorHint="#80868686"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/tv" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/janda_manatee_solid"
                android:text="@string/font"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edt" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvFont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:layout_marginStart="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv1"
                tools:itemCount="10"
                tools:listitem="@layout/item_font" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="13dp"
                android:fontFamily="@font/janda_manatee_solid"
                android:text="@string/color2"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvFont" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:layout_marginStart="14dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                tools:itemCount="10"
                tools:listitem="@layout/item_color_edt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>