<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/img_bg_splash">

        <TextView
            android:id="@+id/titlePermission"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/fredoka_one_regular"
            android:gravity="start"
            android:layout_marginHorizontal="16dp"
            android:text="@string/permission"
            android:textColor="@color/app_color"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="72dp"
            android:adjustViewBounds="true"
            android:layout_marginTop="-13dp"
            android:src="@drawable/img_per"
            app:layout_constraintBottom_toTopOf="@+id/tvTitle"
            app:layout_constraintDimensionRatio="2.52:2.84"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titlePermission" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@+id/imv" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle">

            <RelativeLayout
                android:paddingBottom="6dp"
                android:id="@+id/rl2"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:background="@drawable/bg_12_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl3">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/fredoka_one_regular"
                    android:gravity="center"
                    android:text="@string/storage"
                    android:textColor="@color/app_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/swiVibrate2"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/switch_off" />

            </RelativeLayout>

            <RelativeLayout
                android:paddingBottom="6dp"
                android:id="@+id/rl4"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_12_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rl3">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/fredoka_one_regular"
                    android:gravity="center"
                    android:text="@string/notifications"
                    android:textColor="@color/app_color"
                    android:textSize="16sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/swiVibrate4"
                    android:layout_width="56dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginVertical="10dp"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/switch_off" />
            </RelativeLayout>
        </LinearLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="130dp"
            android:fontFamily="@font/fredoka_one_regular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/continue2"
            android:textColor="@color/app_color"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
