<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/frame_bg_dialog">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvAvtRate"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_rate_five"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_medium"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/four_start_title"
                android:textColor="@color/_1D1D1D"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvAvtRate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/four_start"
                android:textColor="#A9B0BE"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:srb_clearRatingEnabled="false"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_rate2"
                app:srb_drawableFilled="@drawable/ic_rate"
                app:srb_isIndicator="false"
                app:srb_minimumStars="0"
                app:srb_numStars="0"
                app:srb_rating="0"
                app:srb_scrollable="true"
                app:srb_starHeight="30dp"
                app:srb_starPadding="4dp"
                app:srb_starWidth="31dp"
                app:srb_stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="23dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">
                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="20dp"
                    app:strokeColor="@color/white"
                    app:strokeWidth="0dp"
                    app:cardElevation="0dp"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardCornerRadius="10dp">
                    <ImageView

                        android:scaleType="fitXY"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/frame_bg_rate"/>
                <TextView
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:gravity="center"
                    android:paddingVertical="10dp"
                    android:text="@string/rate"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                </com.google.android.material.card.MaterialCardView>
<!--                <androidx.appcompat.widget.AppCompatButton-->
<!--                    android:id="@+id/btnVote"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="40dp"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:background="@drawable/frame_bg_rate"-->
<!--                    android:fontFamily="@font/roboto_medium"-->
<!--                    android:gravity="center"-->
<!--                    android:text="@string/rate"-->
<!--                    android:textAllCaps="false"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textSize="14sp" />-->

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancal"
                    android:layout_width="wrap_content"
                    android:paddingHorizontal="30dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_semibold"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/exit"
                    android:textAllCaps="false"
                    android:textColor="#242424"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
